# oci-manager

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  audit.toml  config.example  install.sh  uninstall.sh
.github/workflows/: ci.yml
src/: cli.rs  config.rs  logic.rs  main.rs  models.rs  notify.rs  oci.rs  telegram_bind.rs  web.rs
static/: index.html  login.html
